# lvgl-demo-nanovg

./: .gitignore  .gitmodules  CMakeLists.txt  lv_conf.h  lv_demo_conf.h
src/: example_sdl_gl3.c  lv_nvg_disp_drv.c  lv_nvg_disp_drv.h  lv_sdl_drv_input.h  lv_sdl_drv_pointer_input.c  main.c  nvg_backend.c  nvg_driver.c  nvg_driver.h  scratch_2.c
